fix(mobile): use dvh so chat widget isn't clipped by iOS browser chrome

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 html,
 body {
   height: 100vh;
+  height: 100dvh;
   width: 100vw;
   margin: 0;
   position: relative;
@@ -499,6 +500,7 @@ button {
     top: 0;
     left: 0;
     height: 100vh;
+    height: 100dvh;
     width: 100vw;
     border-radius: 0;
   }
